Fix methods for new implementation